# prepare_QTL

./: .dockstore.yml  .gitignore  README.md
.github/workflows/: docker-image.yml  validate-workflows.yml
docs/: docker.md  genotype-workflows.md  methylation-qtl.md  molecular-qtl-workflows.md  phenotype-normalization-filtering.md  scripts.md
envs/MethylationRust/: Dockerfile
envs/PhenotypePCs/: Dockerfile
rust/methylation_filter/: Cargo.toml
rust/methylation_filter/src/: main.rs
rust/methylation_merge/: Cargo.toml
scripts/: AggregateMethylationChromosomes.R  AnnotateMethylationSites.R  FilterMethylationShard.R  MergeCovariates.R  MergeMethylationCalls.R  MergeMethylationCohort.R  MethylationUtils.R  NormalizeProteomics.R  PrepareExpression.R  PrepareProteomics.R  PrepareSpliceData.R  ResidualizePhenotypes.R  calculate_PCs.R  validate_dockstore.py
scripts/common/: calculate_PCs.R
scripts/methylation/: AggregateMethylationChromosomes.R  AnalyzeMethylationCpGCorrelation.R  AnnotateMethylationSites.R  BuildMethylationCohortSamples.R  BuildMethylationCorrelationCovariates.R  FilterMethylationShard.R  FinalizeMethylationConnectivity.R  MergeMethylationCohort.R  MethylationUtils.R  (+1 more)
workflows/: AggregateMethylationCohort.wdl  AggregateMethylationCohortArrays.wdl  MergeCovariates.wdl  ProcessMethylationSample.wdl  README.md  ResidualizePhenotypes.wdl  calculateAF.wdl  calculateGenotypePCs.wdl  calculate_phenotypePCs.wdl  merge_methylation.wdl  normalize_pQTL.wdl  prepare_VCF.wdl  prepare_eQTL.wdl  prepare_pQTL.wdl  prepare_sQTL.wdl
workflows/common/: README.md  (+1 more)
(+17 files in other folders)
